# minhalivraria

./: pyproject.toml
config/: settings.py  urls.py
minhalivraria/: apps.py  models.py  serializers.py  views.py
minhalivraria/migrations/: 0001_initial.py  0002_editora.py  0003_autor_alter_categoria_options_alter_editora_options.py  0004_livro.py
