[project]
name = "livraria"
version = "0.1.0"
description = ""
authors = [
    {name = "ldmfabio", email = "ldmfabio@gmail.com"},
]
dependencies = [
    "django>=4.2.5",
    "djangorestframework>=3.14.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
